--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
                 <img src="https://i.imgur.com/fiEuIvc.png" alt="">
             </div>
         </div>
-        <div class="name">Lumen</div>
-        <div class="about">Choose One Below</div>
+        <div class="name">Shadow</div>
+        <div class="about">NARUTOOOOOOO</div>
         <div class="wrapper">
             <div class="button">
-                <a target="_blank" href="https://www.youtube.com/channel/UCDfTgO_yf0funPrsDILEeYQ" class="alink">
+                <a target="_blank" href="https://www.youtube.com/channel/UChX2wlBSAYvXX2HP8xyiOcQ" class="alink">
                     <div class="icon"><i class="fab fa-youtube"></i></div>
-                    <span>Music</span>
+                    <span>Shadow</span>
                 </a>
             </div>
             <div class="button">
                 <a target="_blank" href="https://www.youtube.com/channel/UCMMePApqYAWfe5mkGe6KuQQ" class="alink">
                     <div class="icon"><i class="fab fa-youtube"></i></div>
-                    <span>Gaming</span>
+                    <span>SOON</span>
                 </a>
             </div>
             <div class="button">
