--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
         </div>
         <div>
-            <span class=about>Try</span>
+            <span class=about>Change Color</span>
             <label class="switch">
                 <input type="checkbox" checked onchange="toggleDarkLight()">
                 <span class="slider round"></span>
